// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideMenuItem should render the SideMenuItem component 1`] = `
<div>
  <div
    class="MuiBox-root css-10wzbhq"
  >
    <div
      aria-label="Tooltip Text"
      class="styles__Wrapper-sc-13gge7k-0 bFLHog"
      data-mui-internal-clone-element="true"
    >
      <div
        class="styles__IconContainer-sc-13gge7k-1 hPWhSD"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-ofjrfz"
      >
        Text
      </div>
    </div>
  </div>
</div>
`;

exports[`SideMenuItem should render the SideMenuItem component with disable 1`] = `
<div>
  <div
    class="MuiBox-root css-19xcums"
  >
    <div
      aria-label="Tooltip Text"
      class="styles__Wrapper-sc-13gge7k-0 bFLHog"
      data-mui-internal-clone-element="true"
    >
      <div
        class="styles__IconContainer-sc-13gge7k-1 hPWhSD"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-ofjrfz"
      >
        Text
      </div>
    </div>
  </div>
</div>
`;

exports[`SideMenuItem should render the SideMenuItem component with endIcon 1`] = `
<div>
  <div
    class="MuiBox-root css-10wzbhq"
  >
    <div
      aria-label="Tooltip Text"
      class="styles__Wrapper-sc-13gge7k-0 bFLHog"
      data-mui-internal-clone-element="true"
    >
      <div
        class="styles__IconContainer-sc-13gge7k-1 hPWhSD"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-ofjrfz"
      >
        Text
      </div>
      <div
        class="MuiBox-root css-1p2jtab"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideMenuItem should render the SideMenuItem component with onClick 1`] = `
<div>
  <div
    class="MuiBox-root css-10wzbhq"
  >
    <div
      aria-label="Tooltip Text"
      class="styles__Wrapper-sc-13gge7k-0 bFLHog"
      data-mui-internal-clone-element="true"
    >
      <div
        class="styles__IconContainer-sc-13gge7k-1 hPWhSD"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-ofjrfz"
      >
        Text
      </div>
    </div>
  </div>
</div>
`;

exports[`SideMenuItem should render the SideMenuItem component with selected 1`] = `
<div>
  <div
    class="MuiBox-root css-10wzbhq"
  >
    <div
      aria-label="Tooltip Text"
      class="styles__Wrapper-sc-13gge7k-0 hidrib"
      data-mui-internal-clone-element="true"
    >
      <div
        class="styles__IconContainer-sc-13gge7k-1 hPWhSD"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-ofjrfz"
      >
        Text
      </div>
    </div>
  </div>
</div>
`;
